@@ -1079,7 +1079,6 @@ JOPTION_ANY="Any"
 JOPTION_DO_NOT_USE="- None Selected -"
 JOPTION_FROM_DEFAULT_TEMPLATE="From Default Template"
 JOPTION_MENUS="Menus"
-JOPTION_NO_CATEGORY="- No Category -"
 JOPTION_NO_USER="- No User -"
 JOPTION_OPTIONAL="Optional"
 JOPTION_ORDER_FIRST="Order First"
