@@ -45,7 +45,6 @@ $listDirn	= $this->state->get('list.direction');
 			<?php $category = $this->state->get('filter.category_id');?>
 			<select name="filter_category_id" id="filter_category_id" class="inputbox">
 				<option value=""><?php echo JText::_('JOPTION_SELECT_CATEGORY');?></option>
-				<option value="0"<?php if($category==='0') echo ' selected="selected"';?>><?php echo JText::_('JOPTION_NO_CATEGORY');?></option>
 				<?php echo JHtml::_('select.options', JHtml::_('category.options', 'com_banners'), 'value', 'text', $category);?>
 			</select>
 
