@@ -246,7 +246,6 @@ JLIB_SESSION_XCACHE_EXTENSION_NOT_AVAILABLE="The xcache extension is not availab
 JLIB_USER_ERROR_PASSWORD_NOT_MATCH="Password do not match. Please re-enter password."
 JLIB_UTIL_ERROR_LOADING_FEED_DATA="Error loading feed data"
 
-JOPTION_NO_CATEGORY="- No Category -"
 JOPTION_USE_DEFAULT="- Use Default -"
 
 DATE_FORMAT_LC="l, d F Y"
